--- a/native/android/app/src/main/res/layout/fragment_group_detail.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_detail.xml
@@ -41,6 +41,7 @@
         android:id="@+id/settleUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:background="#F44336"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
@@ -90,7 +91,7 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toTopOf="@+id/swipeContainer"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settleUp" />
     </androidx.constraintlayout.widget.ConstraintLayout>
