--- a/native/android/app/src/main/res/values/colors.xml
+++ b/native/android/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
   <color name="colorPrimaryDark">#3700B3</color>
   <color name="colorAccent">#03DAC5</color>
   <color name="ourTheme">#2BACFC</color>
-
+  <color name="blackColor">#000000</color>
   <color name="clearButtonPressed">#868585</color>
   <color name="positiveNumberColor">#2ECC71 </color>
   <color name="negativeNumberColor">#E74C3C</color>
