AccountEditFragment、accountHome,Addfriend,Addpaymentで修正

--- a/native/android/app/src/main/res/layout/fragment_account_edit.xml
+++ b/native/android/app/src/main/res/layout/fragment_account_edit.xml
@@ -24,7 +24,7 @@
       android:layout_width="0dp"
       android:layout_height="0dp"
       android:clickable="true"
-      android:contentDescription="frontViewAccountEdit"
+      android:contentDescription="frontView"
       android:visibility="gone"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
