--- a/native/android/app/src/main/res/layout/fragment_home.xml
+++ b/native/android/app/src/main/res/layout/fragment_home.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
-        android:text="貸し借りのあるグループ一覧"
+        android:text="グループ一覧"
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
