残りを全て修正

--- a/native/android/app/src/main/res/layout/fragment_settle_up.xml
+++ b/native/android/app/src/main/res/layout/fragment_settle_up.xml
@@ -7,6 +7,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+      android:id="@+id/progresesBarSettleUp"
+      style="?android:attr/progressBarStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:elevation="4dp"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+      android:id="@+id/frontViewSettleUp"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:clickable="true"
+      android:contentDescription="frontView"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@android:drawable/screen_background_dark_transparent" />
+
     <com.github.mikephil.charting.charts.BarChart
       android:id="@+id/chart"
       android:layout_width="0dp"
@@ -96,15 +121,5 @@
       app:layout_constraintStart_toStartOf="@+id/thumbnail2"
       app:layout_constraintTop_toBottomOf="@+id/thumbnail2" />
 
-    <TextView
-      android:id="@+id/nowLoading"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/now_loading"
-      android:visibility="invisible"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
