--- a/native/android/app/src/main/res/layout/fragment_login.xml
+++ b/native/android/app/src/main/res/layout/fragment_login.xml
@@ -9,6 +9,31 @@
     android:background="#2BACFC"
     tools:context=".MainActivity">
 
+    <ProgressBar
+      android:id="@+id/progressBarLogIn"
+      style="?android:attr/progressBarStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:elevation="4dp"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+      android:id="@+id/frontViewLogIn"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:clickable="true"
+      android:contentDescription="frontView"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@android:drawable/screen_background_dark_transparent"/>
+
     <TextView
       android:id="@+id/google_signin_button"
       android:layout_width="wrap_content"
@@ -262,16 +287,5 @@
         app:layout_constraintTop_toTopOf="@+id/twitterLogInButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <TextView
-      android:id="@+id/nowLoading"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/now_loading"
-      android:textSize="18sp"
-      android:visibility="invisible"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
