--- a/native/android/app/src/main/res/layout/fragment_payment_detail.xml
+++ b/native/android/app/src/main/res/layout/fragment_payment_detail.xml
@@ -5,6 +5,30 @@
 <androidx.constraintlayout.widget.ConstraintLayout
   android:layout_width="match_parent"
     android:layout_height="match_parent">
+  <ProgressBar
+    android:id="@+id/progressBarPaymentDetail"
+    style="?android:attr/progressBarStyle"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:elevation="4dp"
+    android:visibility="gone"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"/>
+
+  <ImageView
+    android:id="@+id/frontViewPaymentDetail"
+    android:layout_width="0dp"
+    android:layout_height="0dp"
+    android:clickable="true"
+    android:contentDescription="frontView"
+    android:visibility="gone"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@android:drawable/screen_background_dark_transparent" />
 
   <TextView
     android:id="@+id/date"
