--- a/native/android/app/src/main/res/layout/fragment_update_pass_login.xml
+++ b/native/android/app/src/main/res/layout/fragment_update_pass_login.xml
@@ -7,6 +7,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ProgressBar
+      android:id="@+id/progressBarUpdatePassLogIn"
+      style="?android:attr/progressBarStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:elevation="4dp"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+      android:id="@+id/frontViewUpdatePassLogIn"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:clickable="true"
+      android:contentDescription="frontView"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@android:drawable/screen_background_dark_transparent" />
+
     <EditText
       android:id="@+id/currentPassEdit"
       android:layout_width="0dp"
@@ -82,17 +107,6 @@
       android:text="@string/passwordConfirmInformation"
       app:layout_constraintStart_toStartOf="@+id/passConfirmEditText"
       app:layout_constraintTop_toBottomOf="@+id/passConfirmEditText" />
-    <TextView
-      android:id="@+id/nowLoading"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/now_loading"
-      android:textSize="18sp"
-      android:visibility="invisible"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
       android:id="@+id/textView11"
