SDKのターゲットバージョンを最新のものに設定し、それに伴うバグ修正

--- a/native/android/app/src/main/res/layout/fragment_group_detail.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_detail.xml
@@ -119,6 +119,8 @@
       android:layout_alignParentBottom="true"
       android:background="@color/ourTheme"
       app:layout_constraintBottom_toBottomOf="parent"
+      app:itemIconTint="@color/blackColor"
+      app:itemTextColor="@color/blackColor"
       app:menu="@menu/fooder" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
