支払い画面の修正

--- a/native/android/app/src/main/res/layout/fragment_add_payment_step2_view_pager.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step2_view_pager.xml
@@ -35,8 +35,8 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="24dp"
     android:layout_marginBottom="8dp"
-    android:backgroundTint="#000000"
-    android:text="@string/next"
+    android:backgroundTint="@color/ourTheme"
+    android:text="@string/next_step"
     android:textColor="#FFFFFF"
     android:textSize="18sp"
     app:layout_constraintBottom_toBottomOf="parent"
