--- a/native/android/app/src/main/res/layout/fragment_add_payment_step1.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step1.xml
@@ -77,8 +77,8 @@
       android:layout_height="wrap_content"
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="16dp"
-      android:backgroundTint="#000000"
-      android:text="@string/next"
+      android:backgroundTint="@color/ourTheme"
+      android:text="@string/next_step"
       android:textColor="#FFFFFF"
       android:textSize="18sp"
       app:layout_constraintBottom_toBottomOf="parent"
