--- a/native/android/app/src/main/res/layout/fragment_add_payment_step4.xml
+++ b/native/android/app/src/main/res/layout/fragment_add_payment_step4.xml
@@ -110,7 +110,7 @@
       android:layout_height="wrap_content"
       android:layout_marginEnd="16dp"
       android:layout_marginBottom="16dp"
-      android:backgroundTint="#000000"
+      android:backgroundTint="@color/ourTheme"
       android:text="@string/register_payment"
       android:textColor="#FFFFFF"
       android:textSize="24sp"
