--- a/native/android/app/src/main/res/layout/list_item_settle_up_child_view.xml
+++ b/native/android/app/src/main/res/layout/list_item_settle_up_child_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+  xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto">
   <data>
     <variable
@@ -12,13 +13,14 @@
         android:layout_height="wrap_content">
 
       <TextView
-        android:id="@+id/userName"
+        android:id="@+id/amount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:networkPayerName="@{user}" />
+        app:networkPayerAmount="@{user}" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
