--- a/native/android/app/src/main/res/layout/list_item_settle_up_group.xml
+++ b/native/android/app/src/main/res/layout/list_item_settle_up_group.xml
@@ -20,14 +20,19 @@
       android:id="@+id/userName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
+      android:textSize="24sp"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:networkPayerName="@{user}" />
 
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/childRecyclerView"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="8dp"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/userName"
