支払い一括完了の実装

--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -332,5 +332,8 @@
       android:name="listNetworkPayer"
       app:argType="work.calmato.prestopay.network.NetworkPayerContainer"
       />
+    <argument
+      android:name="groupDetail"
+      app:argType="work.calmato.prestopay.network.GroupPropertyResponse"/>
   </fragment>
 </navigation>
