--- a/native/android/app/src/main/res/layout/fragment_settle_up_group.xml
+++ b/native/android/app/src/main/res/layout/fragment_settle_up_group.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:android="http://schemas.android.com/apk/res/android">
   <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent" android:layout_height="match_parent">
@@ -8,9 +9,25 @@
       android:id="@+id/parentRecyclerView"
       android:layout_width="0dp"
       android:layout_height="0dp"
-      app:layout_constraintBottom_toBottomOf="parent"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintBottom_toTopOf="@+id/settleUpButton"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+      android:id="@+id/settleUpButton"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginBottom="8dp"
+      android:backgroundTint="@color/ourTheme"
+      android:text="精算を完了する"
+      android:textColor="#FFFFFF"
+      android:textSize="24sp"
+      android:textStyle="bold"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent" />
+
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
