通信中にProgressBar出して通信終わったらGroupDetailに遷移させる

--- a/native/android/app/src/main/res/layout/fragment_settle_up_group.xml
+++ b/native/android/app/src/main/res/layout/fragment_settle_up_group.xml
@@ -1,10 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:android="http://schemas.android.com/apk/res/android">
-  <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_width="match_parent" android:layout_height="match_parent">
+  xmlns:tools="http://schemas.android.com/tools">
 
+  <androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+    <ProgressBar
+      android:id="@+id/progressBarSettleUpGroup"
+      style="?android:attr/progressBarStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:elevation="8dp"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+    <ImageView
+      android:id="@+id/frontViewSettleUpGroup"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:clickable="true"
+      android:contentDescription="frontView"
+      android:elevation="4dp"
+      android:visibility="gone"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@android:drawable/screen_background_light_transparent" />
     <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/parentRecyclerView"
       android:layout_width="0dp"
