--- a/native/android/app/src/main/res/navigation/navigation.xml
+++ b/native/android/app/src/main/res/navigation/navigation.xml
@@ -335,5 +335,8 @@
     <argument
       android:name="groupDetail"
       app:argType="work.calmato.prestopay.network.GroupPropertyResponse"/>
+    <action
+      android:id="@+id/action_settleUpGroup_to_groupDetail"
+      app:destination="@id/groupDetail" />
   </fragment>
 </navigation>
