Native adを簡易的に実装

--- a/native/android/app/src/main/res/layout/activity_main.xml
+++ b/native/android/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:defaultNavHost="true"
-    app:layout_constraintBottom_toTopOf="@+id/adView"
+    app:layout_constraintBottom_toTopOf="@+id/native_ad"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
@@ -21,18 +21,30 @@
 
 <!--  TODO リリース時は広告IDをテスト用から実際用に変更する-->
   <!--    app:adUnitId="ca-app-pub-3812118776211807/7938769424"-->
-  <com.google.android.gms.ads.AdView
-    android:id="@+id/adView"
-    android:layout_width="0dp"
+<!--  <com.google.android.gms.ads.AdView-->
+<!--    android:id="@+id/adView"-->
+<!--    android:layout_width="0dp"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:layout_alignParentBottom="true"-->
+<!--    android:layout_centerHorizontal="true"-->
+<!--    android:visibility="gone"-->
+<!--    app:adSize="BANNER"-->
+<!--    app:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintStart_toStartOf="parent" />-->
+
+
+  <com.google.android.ads.nativetemplates.TemplateView
+    android:id="@+id/native_ad"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentBottom="true"
-    android:layout_centerHorizontal="true"
-    android:visibility="gone"
-    app:adSize="BANNER"
-    app:adUnitId="ca-app-pub-3940256099942544/6300978111"
+    app:gnt_template_type="@layout/gnt_small_template_view"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent" />
+  <!-- this attribute determines which template is used. The other option is
+   @layout/gnt_medium_template_view -->
 </androidx.constraintlayout.widget.ConstraintLayout>
 
 </merge>
