--- a/native/android/app/src/main/res/layout/activity_main.xml
+++ b/native/android/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:defaultNavHost="true"
-    app:layout_constraintBottom_toTopOf="@+id/native_ad"
+    app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
@@ -35,14 +35,14 @@
 <!--    app:layout_constraintStart_toStartOf="parent" />-->
 
 
-  <com.google.android.ads.nativetemplates.TemplateView
-    android:id="@+id/native_ad"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:gnt_template_type="@layout/gnt_small_template_view"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintEnd_toEndOf="parent"
-    app:layout_constraintStart_toStartOf="parent" />
+<!--  <com.google.android.ads.nativetemplates.TemplateView-->
+<!--    android:id="@+id/native_ad"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    app:gnt_template_type="@layout/gnt_small_template_view"-->
+<!--    app:layout_constraintBottom_toBottomOf="parent"-->
+<!--    app:layout_constraintEnd_toEndOf="parent"-->
+<!--    app:layout_constraintStart_toStartOf="parent" />-->
   <!-- this attribute determines which template is used. The other option is
    @layout/gnt_medium_template_view -->
 </androidx.constraintlayout.widget.ConstraintLayout>
