新規作成してメンバーを追加する画面を作成

--- a/native/android/app/src/main/res/layout/fragment_create_group.xml
+++ b/native/android/app/src/main/res/layout/fragment_create_group.xml
@@ -67,6 +67,7 @@
       android:textAlignment="center"
       android:textSize="24sp"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.496"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
