--- a/native/android/app/src/main/res/layout/fragment_group_edit_add_friend.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_edit_add_friend.xml
@@ -7,6 +7,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+      android:id="@+id/textView16"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="16dp"
+      android:layout_marginTop="24dp"
+      android:text="友達からメンバーを追加"
+      android:textSize="24sp"
+      android:textStyle="bold"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
+
     <ProgressBar
       android:id="@+id/progressBarGroupEditAddFriend"
       style="?android:attr/progressBarStyle"
@@ -37,11 +49,12 @@
       android:id="@+id/searchFriend"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
       android:iconifiedByDefault="false"
       android:queryHint="友達検索"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent" />
+      app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <TextView
       android:id="@+id/friendText"
