--- a/native/android/app/src/main/res/layout/fragment_group_edit_add_unauthorized.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_edit_add_unauthorized.xml
@@ -9,16 +9,16 @@
 
     <Button
       android:id="@+id/unauthorizedAddButton"
-      android:layout_width="250dp"
-      android:layout_height="0dp"
-      android:layout_marginTop="16dp"
+      android:layout_width="213dp"
+      android:layout_height="48dp"
+      android:layout_marginTop="32dp"
       android:backgroundTint="#2BACFC"
       android:fontFamily="sans-serif"
-      android:text="追加
-"
+      android:text="追加"
       android:textColor="#FFFFFF"
       app:layout_constraintBottom_toTopOf="@+id/view"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
       tools:ignore="MissingConstraints" />
@@ -59,6 +59,7 @@
       android:inputType="textPersonName"
       android:textAlignment="center"
       app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/unauthorizedThumbnail" />
 
