--- a/native/android/googleads-mobile-android-native-templates-master/nativetemplates/src/main/res/layout/gnt_small_template_view.xml
+++ b/native/android/googleads-mobile-android-native-templates-master/nativetemplates/src/main/res/layout/gnt_small_template_view.xml
@@ -10,167 +10,161 @@
       >
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:layout_centerInParent="true"
-        android:background="@drawable/gnt_outline_shape"
-        >
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_centerInParent="true">
+
       <androidx.constraintlayout.widget.ConstraintLayout
 
+        android:id="@+id/background"
+        android:layout_width="@dimen/gnt_no_size"
+        android:layout_height="@dimen/gnt_no_size"
+        android:layout_marginStart="@dimen/gnt_default_margin"
+        android:layout_marginTop="@dimen/gnt_default_margin"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="@dimen/gnt_default_margin"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="H,8:1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+          android:id="@+id/icon"
+          android:layout_width="0dp"
+          android:layout_height="match_parent"
+          android:layout_marginStart="@dimen/gnt_no_margin"
+          android:layout_marginTop="@dimen/gnt_no_margin"
+          android:layout_marginEnd="@dimen/gnt_no_margin"
+          android:layout_marginBottom="@dimen/gnt_no_margin"
+          android:layout_weight="0"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintDimensionRatio="H,1:1"
+          app:layout_constraintEnd_toStartOf="@+id/content"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+          android:id="@+id/content"
           android:layout_width="@dimen/gnt_no_size"
           android:layout_height="@dimen/gnt_no_size"
-          android:layout_marginEnd="@dimen/gnt_default_margin"
           android:layout_marginStart="@dimen/gnt_default_margin"
-          android:layout_marginTop="@dimen/gnt_default_margin"
-          android:layout_marginBottom="@dimen/gnt_default_margin"
-          app:layout_constraintDimensionRatio="H,4:1"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
+          android:orientation="vertical"
           app:layout_constraintBottom_toBottomOf="parent"
-          android:orientation="horizontal"
-          android:id="@+id/background"
-          >
-        <ImageView
-            android:id="@+id/icon"
-            android:layout_width="0dp"
-            android:layout_weight="0"
-            android:layout_height="match_parent"
-            android:layout_marginTop="@dimen/gnt_no_margin"
-            android:layout_marginStart="@dimen/gnt_no_margin"
-            android:layout_marginBottom="@dimen/gnt_no_margin"
-            android:layout_marginEnd="@dimen/gnt_no_margin"
-            app:layout_constraintDimensionRatio="H,1:1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/content"
-            />
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="@dimen/gnt_no_size"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintStart_toEndOf="@id/icon"
+          app:layout_constraintTop_toTopOf="parent">
+
+          <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/headline"
+            android:layout_width="match_parent"
             android:layout_height="@dimen/gnt_no_size"
-            android:layout_marginTop="@dimen/gnt_default_margin"
-            android:layout_marginBottom="@dimen/gnt_default_margin"
-            android:layout_marginStart="@dimen/gnt_default_margin"
-            android:layout_marginEnd="@dimen/gnt_default_margin"
-            android:orientation="vertical"
-            android:id="@+id/content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/icon"
+            android:layout_weight="@dimen/gnt_text_row_weight"
+            android:background="@color/gnt_test_background_color"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toTopOf="@+id/row_two"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-          >
-          <LinearLayout
-              android:id="@+id/headline"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="@dimen/gnt_no_size"
-              android:layout_weight="@dimen/gnt_text_row_weight"
-              app:layout_constraintBottom_toTopOf="@+id/row_two"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toTopOf="parent"
-              android:background="@color/gnt_test_background_color"
-              >
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/primary"
-                android:background="@color/gnt_white"
-                android:textStyle="bold"
-                android:textSize="@dimen/gnt_text_size_large"
-                android:textColor="@color/gnt_gray"
-                android:lines="1"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/gnt_no_margin"
-                android:layout_marginBottom="@dimen/gnt_no_margin"
-                android:layout_marginStart="@dimen/gnt_no_margin"
-                android:layout_marginEnd="@dimen/gnt_no_margin"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
-          </LinearLayout>
-          <LinearLayout
-              android:id="@+id/row_two"
-              android:orientation="horizontal"
-              android:layout_width="match_parent"
-              android:layout_height="@dimen/gnt_no_size"
-              android:layout_weight="@dimen/gnt_text_row_weight"
-              app:layout_constraintBottom_toTopOf="@+id/cta"
-              app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/headline"
-              >
-            <TextView
-                android:background="@drawable/gnt_rounded_corners_shape"
-                android:layout_width="@dimen/gnt_ad_indicator_width"
-                android:gravity="center"
-                android:id="@+id/ad_notification_view"
-                android:layout_height="@dimen/gnt_ad_indicator_height"
-                android:layout_marginTop="@dimen/gnt_ad_indicator_top_margin"
-                android:layout_marginStart="@dimen/gnt_no_margin"
-                android:layout_marginEnd="@dimen/gnt_default_margin"
-                android:text="Ad"
-                android:textColor="@color/gnt_ad_green"
-                android:textStyle="bold"
-                android:textSize="@dimen/gnt_ad_indicator_text_size"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
-            </TextView>
-            <RatingBar
-                android:id="@+id/rating_bar"
-                android:background="@color/gnt_white"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="@dimen/gnt_text_size_small"
-                android:textColor="@color/gnt_gray"
-                android:numStars="0"
-                android:lines="1"
-                android:layout_marginTop="@dimen/gnt_no_margin"
-                android:layout_marginBottom="@dimen/gnt_no_margin"
-                android:layout_marginStart="@dimen/gnt_no_margin"
-                android:layout_marginEnd="@dimen/gnt_no_margin"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/ad_notification_view"
-                app:layout_constraintTop_toTopOf="parent">
-
-            </RatingBar>
-            <TextView
-                android:id="@+id/secondary"
-                android:background="@color/gnt_white"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="top"
-                android:textSize="@dimen/gnt_text_size_small"
-                android:textColor="@color/gnt_gray"
-                android:lines="1"
-                android:layout_marginTop="@dimen/gnt_no_margin"
-                android:layout_marginBottom="@dimen/gnt_no_margin"
-                android:layout_marginStart="@dimen/gnt_no_margin"
-                android:layout_marginEnd="@dimen/gnt_no_margin"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/ad_notification_view"
-                app:layout_constraintTop_toTopOf="parent"
-                />
-
-          </LinearLayout>
-          <Button
-              android:id="@+id/cta"
-              android:layout_width="match_parent"
-              android:layout_height="@dimen/gnt_no_size"
-              android:background="@color/gnt_blue"
-              android:textColor="@color/gnt_white"
+              android:id="@+id/primary"
+              android:layout_width="0dp"
+              android:layout_height="match_parent"
+              android:layout_marginTop="8dp"
+              android:layout_marginBottom="8dp"
+              android:background="@color/gnt_white"
               android:lines="1"
+              android:textColor="@color/gnt_gray"
+              android:textSize="@dimen/gnt_text_size_large"
+              android:textStyle="bold"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toStartOf="@+id/cta"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+              android:id="@+id/ad_notification_view"
+              android:layout_width="@dimen/gnt_ad_indicator_width"
+              android:layout_height="@dimen/gnt_ad_indicator_height"
+              android:layout_marginTop="@dimen/gnt_ad_indicator_top_margin"
+              android:background="@drawable/gnt_rounded_corners_shape"
+              android:gravity="center"
+              android:text="Ad"
+              android:textColor="@color/gnt_ad_green"
+              android:textSize="@dimen/gnt_ad_indicator_text_size"
+              android:textStyle="bold"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintTop_toTopOf="parent"></TextView>
+
+            <Button
+              android:id="@+id/cta"
+              android:layout_width="60dp"
+              android:layout_height="@dimen/gnt_no_size"
+              android:background="@drawable/gnt_rounded_corners_shape"
+              android:backgroundTint="@color/gnt_blue"
+              android:lines="1"
+              android:textColor="@color/gnt_white"
+              android:visibility="visible"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toEndOf="@+id/ad_notification_view"
+              app:layout_constraintTop_toBottomOf="@+id/ad_notification_view" />
+          </androidx.constraintlayout.widget.ConstraintLayout>
+
+          <LinearLayout
+            android:id="@+id/row_two"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/gnt_no_size"
+            android:layout_weight="@dimen/gnt_text_row_weight"
+            android:orientation="horizontal"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/headline">
+
+            <RatingBar
+              android:id="@+id/rating_bar"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_marginStart="@dimen/gnt_no_margin"
+              android:layout_marginTop="@dimen/gnt_no_margin"
+              android:layout_marginEnd="@dimen/gnt_no_margin"
+              android:layout_marginBottom="@dimen/gnt_no_margin"
+              android:background="@color/gnt_white"
+              android:lines="1"
+              android:numStars="0"
+              android:textColor="@color/gnt_gray"
+              android:textSize="@dimen/gnt_text_size_small"
+              android:visibility="visible"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
-              app:layout_constraintStart_toStartOf="parent"
-              app:layout_constraintTop_toBottomOf="@id/row_two"
-              />
+              app:layout_constraintStart_toEndOf="@id/ad_notification_view"
+              app:layout_constraintTop_toTopOf="parent">
+
+            </RatingBar>
+
+            <TextView
+              android:id="@+id/secondary"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:layout_marginStart="@dimen/gnt_no_margin"
+              android:layout_marginTop="@dimen/gnt_no_margin"
+              android:layout_marginEnd="@dimen/gnt_no_margin"
+              android:layout_marginBottom="@dimen/gnt_no_margin"
+              android:background="@color/gnt_white"
+              android:gravity="top"
+              android:lines="1"
+              android:textColor="@color/gnt_gray"
+              android:textSize="@dimen/gnt_text_size_small"
+              android:visibility="visible"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toEndOf="@id/ad_notification_view"
+              app:layout_constraintTop_toTopOf="parent" />
+
+          </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
