--- a/native/android/googleads-mobile-android-native-templates-master/nativetemplates/src/main/res/values/colors.xml
+++ b/native/android/googleads-mobile-android-native-templates-master/nativetemplates/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
   <color name="gnt_white">#FFFFFF</color>
   <color name="gnt_red">#FF0000</color>
   <color name="gnt_green">#00FF00</color>
-  <color name="gnt_blue">#4285f4</color>
+  <color name="gnt_blue">#2BACFC</color>
   <color name="gnt_ad_green">#3A6728</color>
   <color name="gnt_gray">#808080</color>
   <color name="gnt_outline">#E0E0E0</color>
