グループに認証されてないユーザーを追加

--- a/native/android/app/src/main/res/layout/fragment_group_edit_add_unauthorized.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_edit_add_unauthorized.xml
@@ -7,6 +7,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+      android:id="@+id/frontView"
+      android:layout_width="0dp"
+      android:layout_height="0dp"
+      android:clickable="true"
+      android:elevation="4dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@android:drawable/screen_background_light_transparent" />
+
     <Button
       android:id="@+id/unauthorizedAddButton"
       android:layout_width="213dp"
@@ -20,7 +32,7 @@
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
+      app:layout_constraintTop_toBottomOf="@+id/unauthorizedAccountName"
       tools:ignore="MissingConstraints" />
 
     <de.hdodenhof.circleimageview.CircleImageView
@@ -50,7 +62,7 @@
       app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-      android:id="@+id/editTextTextPersonName"
+      android:id="@+id/unauthorizedAccountName"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="16dp"
@@ -62,6 +74,17 @@
       app:layout_constraintHorizontal_bias="0.497"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/unauthorizedThumbnail" />
+
+    <ProgressBar
+      android:id="@+id/progressBar"
+      style="?android:attr/progressBarStyle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:elevation="8dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
