--- a/native/android/app/src/main/res/layout/fragment_group_edit.xml
+++ b/native/android/app/src/main/res/layout/fragment_group_edit.xml
@@ -182,8 +182,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/addUnauthorizedUsers"
-      android:layout_width="410dp"
-      android:layout_height="48dp"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/groupEditAddFriend">
