--- a/native/android/app/src/main/res/layout/list_item_plane.xml
+++ b/native/android/app/src/main/res/layout/list_item_plane.xml
@@ -3,7 +3,9 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools">
+
   <data>
+
     <variable
       name="userProperty"
       type="work.calmato.prestopay.network.UserProperty" />
@@ -13,35 +15,47 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="0dp"
-    android:background="@color/tw__solid_white">
+    android:background="@color/tw__solid_white"
+    app:layout_constraintDimensionRatio="H,6:1">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-      android:id="@+id/thumbnail"
-      android:layout_width="40dp"
-      android:layout_height="40dp"
-      android:layout_marginStart="8dp"
-      android:layout_marginTop="2dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.0"
-      app:thumbnail="@{userProperty}" />
-
-    <TextView
-      android:id="@+id/userName"
+    <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="0dp"
-      android:layout_height="40dp"
-      android:layout_marginStart="24dp"
-      android:layout_marginTop="2dp"
+      android:layout_height="0dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="8dp"
       android:layout_marginEnd="8dp"
-      android:textSize="24sp"
-      app:layout_constraintBottom_toBottomOf="@+id/thumbnail"
+      android:layout_marginBottom="8dp"
+      app:layout_constraintBottom_toBottomOf="parent"
+      app:layout_constraintDimensionRatio="H,8:1"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintStart_toEndOf="@+id/thumbnail"
-      app:layout_constraintTop_toTopOf="@+id/thumbnail"
-      app:layout_constraintVertical_bias="0.5"
-      app:username="@{userProperty}"
-      tools:text="userName" />
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent">
+
+      <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/thumbnail"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="H,1:1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:thumbnail="@{userProperty}" />
+
+      <TextView
+        android:id="@+id/userName"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:gravity="center_vertical"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/thumbnail"
+        app:layout_constraintTop_toTopOf="parent"
+        app:username="@{userProperty}"
+        tools:layout_editor_absoluteX="24dp"
+        tools:text="userName" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
   </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
